# hamster

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: devNotes.md
inc/: Cparcel.h  ITask.h  Task.h  Thread.h  ThreadPool.h
inc/util/: syncUtils.h
src/: Cparcel.cpp  DemoMain.cpp  Thread.cpp  ThreadPool.cpp  singleTest.cpp  syncUtils.cpp
test/: test.cpp
